--- a/Project1AboutMe/index.html
+++ b/Project1AboutMe/index.html
@@ -44,7 +44,7 @@ useful skills that I will be able to use in future projects.
 
     <body>
         <h1>Christian Durrant</h1>
-        <img src="./Project1AboutMe/BodyProfile.jpg" alt="Image Not Found">
+        <img src="https://github.com/ChristianDurrant427/Project1_Web_Programming/blob/main/BodyProfile.jpg" alt="Image Not Found">
 
         <h2>Personal Info:</h2>
 
