--- a/Project1AboutMe/index.html
+++ b/Project1AboutMe/index.html
@@ -44,7 +44,7 @@ useful skills that I will be able to use in future projects.
 
     <body>
         <h1>Christian Durrant</h1>
-        <img src="../BodyProfile.jpg" alt="Image Not Found test123">
+        <img src="../BodyProfile.jpg" alt="This is a new message to see if this works">
 
         <h2>Personal Info:</h2>
 
