change the title of haiku

--- a/Project1AboutMe/index.html
+++ b/Project1AboutMe/index.html
@@ -65,7 +65,7 @@ useful skills that I will be able to use in future projects.
             <li><em>Jurassic Park</em> <a href="https://www.michaelcrichton.com/works/jurassic-park/">Michael Crichton</a></li>
         </ol>
 
-        <h2>A Haiku I Wrote</h2>
+        <h2>Peace in Solitude</h2>
         <p>Sitting here writing this code, with soft music going and my wife next to me, things are better than I think they are.<br> 
         I just need to give the time to view the world at a slower pace </p>
         <p style="text-align: center;">
