--- a/index.html
+++ b/index.html
@@ -20,31 +20,13 @@ useful skills that I will be able to use in future projects.
 -->
 <html>
     <head>
-        <style>
-            table, th, td {
-                border: 1px, solid black;
-                padding: 3px;
-            }
-            table {
-                border-spacing: 3px;
-            }
-            p, li, table, th, td{
-                font-family: Georgia, 'Times New Roman', Times, serif;
-            }
-            a {
-                text-decoration: none;
-            }
-            a:hover {
-                text-decoration: underline;
-            }
-            
-        </style>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>About Christian Durrant</title>
     </head>
 
     <body>
         <h1>Christian Durrant</h1>
-        <img src="../BodyProfile.jpg" alt="This is a new message to see if this works">
+        <img src="../BodyProfile.jpg" alt="This is a new message to see if this works" class="imgstyle">
 
         <h2>Personal Info:</h2>
 
@@ -65,7 +47,7 @@ useful skills that I will be able to use in future projects.
             <li><em>Jurassic Park</em> <a href="https://www.michaelcrichton.com/works/jurassic-park/">Michael Crichton</a></li>
         </ol>
 
-        <h2>A Haiku I Wrote</h2>
+        <h2>Peace in Solitude</h2>
         <p>Sitting here writing this code, with soft music going and my wife next to me, things are better than I think they are.<br> 
         I just need to give the time to view the world at a slower pace </p>
         <p style="text-align: center;">
@@ -94,7 +76,7 @@ useful skills that I will be able to use in future projects.
         </p>
 
         <h2>Class Schedule</h2>
-        <table style="width:100%">
+        <table class="tableschematics">
             <tr>
                 <th></th>
                 <th>Monday</th>
@@ -106,34 +88,34 @@ useful skills that I will be able to use in future projects.
             
             <tr>
                 <td>3:00</td>
-                <td rowspan="2" style="color: brown;">Discrete Mathematics</td>
-                <td rowspan="2" style="color:red;">Web Programming</td>
-                <td style="color: green;">English</td>
-                <td style="color: orange;">Writing 1010</td>
+                <td rowspan="2" class="discretemath">Discrete Mathematics</td>
+                <td rowspan="2" class="webprogramming" >Web Programming</td>
+                <td class="english">English</td>
+                <td class="writing">Writing 1010</td>
                 <td>Coming Home from Work</td>
             </tr>
             <tr>
                 <td>3:30</td>
-                <td rowspan="2" style="color: orange;">Writing 1010</td>
-                <td rowspan="2" style="color: brown;">Discrete Mathematics</td>
-                <td rowspan="2" style="color:red;">Web Programming</td>
+                <td rowspan="2" class="writing">Writing 1010</td>
+                <td rowspan="2" class="discretemath">Discrete Mathematics</td>
+                <td rowspan="2" class="webprogramming">Web Programming</td>
             </tr>
             <tr>
                 <td>4:00</td>
-                <td style="color: green;">English</td>
-                <td rowspan="2" style="color: orange;">Writing 1010</td>
+                <td class="english">English</td>
+                <td rowspan="2" class="writing">Writing 1010</td>
             </tr>
             <tr>
                 <td>4:30</td>
-                <td style="color: orange;">Writing 1010</td>
-                <td rowspan="2" style="color: teal;">Workout</td>
-                <td style="color:brown;">Web Programming</td>
-                <td rowspan="2" style="color: teal;">Workout</td>
+                <td class="writing">Writing 1010</td>
+                <td rowspan="2" class="workout">Workout</td>
+                <td class="webprogramming">Web Programming</td>
+                <td rowspan="2" class="workout">Workout</td>
             </tr>
             <tr>
                 <td>5:00</td>
-                <td style="color: teal;">Workout</td>
-                <td style="color: green;">English</td>
+                <td class="workout">Workout</td>
+                <td class="english">English</td>
                 <td>Going to DND</td>
             </tr>
         </table>
