inserting modal for image expansion

--- a/index.html
+++ b/index.html
@@ -18,16 +18,25 @@ especially as someone who never has worked in HTML. However this assignment was 
 useful skills that I will be able to use in future projects. 
  
 -->
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>About Christian Durrant</title>
     </head>
-    <div>
+    <div class="centerpiece">
         <body>
             <h1>Christian Durrant</h1>
-            <img src="../BodyProfile.jpg" alt="This is a new message to see if this works" class="imgstyle">
+            <img src="../BodyProfile.jpg" alt="This is a new message to see if this works" class="imgstyle" id="img1">
 
+              
+            <div class="modal" onclick="">
+
+                <span class="close">&times;</span>
+
+                <img class="modal-content" id="img01">
+
+            </div>
+        
             <h2>Personal Info:</h2>
 
             <ul>
@@ -120,5 +129,5 @@ useful skills that I will be able to use in future projects.
                 </tr>
             </table>
         </body>
-    </div>
+    </div class="centerpiece">
 </html>
