added javascript for modal

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ useful skills that I will be able to use in future projects.
             <img src="../BodyProfile.jpg" alt="This is a new message to see if this works" class="imgstyle" id="img1">
 
               
-            <div class="modal" onclick="">
+            <div class="modal" id="ImageModal">
 
                 <span class="close">&times;</span>
 
