adding javascript file to index.html

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@ useful skills that I will be able to use in future projects.
     </head>
     <div class="centerpiece">
         <body>
+            <script src="modal.js"></script>
             <h1>Christian Durrant</h1>
-            <img src="../BodyProfile.jpg" alt="This is a new message to see if this works" class="imgstyle" id="img1">
+            <img id="img1"src="../BodyProfile.jpg" alt="This is a new message to see if this works" class="imgstyle">
 
               
-            <div class="modal" id="ImageModal">
+            <div id="ImageModal" class="modal">
 
                 <span class="close">&times;</span>
 
