incorrect class definition: modal-content to modal-img

--- a/index.html
+++ b/index.html
@@ -25,17 +25,13 @@ useful skills that I will be able to use in future projects.
     </head>
     <div class="centerpiece">
         <body>
-            <script src="modal.js"></script>
             <h1>Christian Durrant</h1>
             <img id="img1"src="../BodyProfile.jpg" alt="This is a new message to see if this works" class="imgstyle">
 
               
             <div id="ImageModal" class="modal">
-
                 <span class="close">&times;</span>
-
-                <img class="modal-content" id="img01">
-
+                <img class="modal-img" id="img01">
             </div>
         
             <h2>Personal Info:</h2>
@@ -129,6 +125,7 @@ useful skills that I will be able to use in future projects.
                     <td>Going to DND</td>
                 </tr>
             </table>
+            <script src="modal.js"></script>
         </body>
     </div class="centerpiece">
 </html>
